--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -229,22 +229,24 @@ header {
         }
         
         nav {
-            position: absolute;
+            position: fixed;
             top: 44px;
             left: 0;
             width: 100%;
-            height: 100vh;
+            height: calc(100% - 44px);
             display: none;
+            text-align: center;
             background: rgba($dark-purple, .9);
             &.open-menu {
-                display: block;
+                display: table;
             }
             & + li {
                 margin: 0;
             }
             ul {
                 text-align: center;
-                padding-top: 52px;
+                display: table-cell;
+                vertical-align: middle;
                 li {
                     display: block;
                     & + li {
@@ -253,7 +255,7 @@ header {
                     a {
                         font-size: 48px;
                         color: #fff;
-                        line-height: 80px;
+                        line-height: 56px;
                     }
                 }
             }
@@ -317,21 +319,20 @@ header {
     }
 }
 @media (max-width: $smartphone) and (orientation: landscape) {
-    header nav ul {
-        padding-top: 24px;
-        li a {
-            font-size: 42px;
-            line-height: 66px;
-        }
+    header nav ul li a,
+    header.scrolled nav ul li a {
+        font-size: 42px;
     }
 }
 @media (max-width: $smartphoneMin) {
-    header nav ul li a {
+    header nav ul li a,
+    header.scrolled nav ul li a {
         font-size: 42px;
     }
 }
 @media (max-width: $smartphoneMin) and (orientation: landscape) {
-    header nav ul {
-        padding-top: 8px;
+    header nav ul li a,
+    header.scrolled nav ul li a {
+        line-height: 46px;
     }
 }
